# kumofs

./: COPYING  ChangeLog  Makefile.am  NOTICE  README.md  bootstrap  configure.in  convertdb.c  kumo-get.rb  kumoctl  kumoctl.rb  kumolog  kumostat  preprocess  protocol.h  storage.h
control/: control.cc  control.h
doc/: Makefile  doc.en.md  doc.ja.md  kumo-gateway.1  kumo-gateway.1.txt  kumo-manager.1  kumo-manager.1.txt  kumo-server.1  kumo-server.1.txt  kumoctl.1  kumoctl.1.txt  kumohash.1  kumohash.1.txt  kumolog.1  kumolog.1.txt  kumomergedb.1  kumomergedb.1.txt  kumostat.1  kumostat.1.txt  kumotop.1  kumotop.1.txt  memo.html  memo.txt  user.css  user.html  user.txt  wiki.en.md  wiki.ja.md
gateway/: cloudy.cc  cloudy.h  gateway.h  memproto.cc  memproto.h  memproto_text.cc  memproto_text.h  memtext.cc  memtext.h
kazuhiki/: Makefile.am
loadtest/: README  kill-and-start-svr  set-and-check  set-and-check-eternal
log/: Makefile  Makefile.am  Makefile.in  logpack.c  logpack.h  logpack.hpp.erb  logpacker.cc  logpacker.h  mlogger.h  mlogger.h.erb  mlogger_ostream.cc
logic/: base.cc  base.h  clock.h  cluster.h  global.h  gw.cc  gw.h  gw_cmd.cc  gw_impl.h  gw_rpc.cc  gw_store.cc  hash.cc  hash.h  mergedb.cc  mgr.cc  mgr.h  mgr_cmd.cc  mgr_control.cc  mgr_control.h  mgr_impl.h  mgr_replace.cc  mgr_rpc.cc  rpc.h  srv.cc  srv.h  srv_cmd.cc  srv_control.cc  srv_impl.h  srv_offer.cc  srv_replace.cc  srv_rpc.cc  srv_stat.cc  srv_store.cc
memproto/: Makefile.am  memproto.c  memproto.h  memproto_text.h  memproto_text.rl  memtext.h  memtext.rl
mp/: Makefile.am  functional.h  memory.h  pp.h  shared_buffer.h  shared_buffer_impl.h  source.h  source_impl.h  stream_buffer.h  stream_buffer_impl.h
mp/wavy/: core.pre.h
mpsrc/: Makefile.am  wavy_edge.h  wavy_edge_kqueue.h  wavy_listen.cc
rpc/: Makefile.am  address.cc  address.h  client.h  client_tmpl.h  cluster.cc  cluster.cc.mv  cluster.h  cluster.h.mv  connection.h  message.h  node_address.h  protocol.h  responder.h  responder_impl.h  rpc.h  sbuffer.h  server.cc  server.h  session.cc  session.h  session_impl.h  session_tmpl.h  transport.cc  transport.h  transport_impl.h  types.h  vrefbuffer.cc  vrefbuffer.h  wavy.h  weak_responder.h  weak_responder_fwd.h  weak_responder_impl.h
rt/: 01_mgr1_kill_1_srv.rt  02_mgr2_kill_1_mgr.rt  03_mgr1_kill_2_srvs.rt  04_mgr2_kill_2_srvs.rt  05_mgr2_kill_1_srv_1_mgr.rt  06_mgr2_kill_1_mgr_1_srv.rt  07_mgr2_kill_2_srvs_while_replacing.rt  08_mgr2_kill_2_srvs_while_replacing2.rt  09_cas.rt  README  chukan.rb  common.rb  double_kill_up.rb  kill_on_replace.rb  mgr_kill_up.rb  srv_kill_up.rb
src/: Makefile.am
src/command/: Makefile.am  kumoctl  kumohash  kumolog  kumostat  kumotop  mergedb.cc
src/gate/: Makefile.am  cloudy.cc  cloudy.h  interface.h  memcache_binary.cc  memcache_binary.h  memcache_text.cc  memcache_text.h
src/gate/memproto/: memproto.c  memproto.h  memtext.c  memtext.h  memtext.rl
src/kazuhiki/: kazuhiki.cc  kazuhiki.h
src/log/: Makefile.am  logpack.c  logpack.hpp.erb  logpacker.cc  logpacker.h  mlogger.cc  mlogger.h.erb  mlogger_null.cc  mlogger_null.h  mlogger_ostream.cc  mlogger_ostream.h  mlogger_syslog.cc  mlogger_syslog.h  mlogger_tty.cc  mlogger_tty.h
src/logic/: Makefile.am  boot.cc  boot.h  client_logic.h  clock.h  clock_logic.h  cluster_logic.h  gateway.proto.h  global.h  hash.cc  hash.h  manager.proto.h  msgtype.h  protogen  role.h  rpc_server.h  server.proto.h  wavy_server.cc  wavy_server.h
src/logic/gateway/: Makefile.am  framework.cc  framework.h  gate.cc  gate_cloudy.cc  gate_cloudy.h  gate_memproto.cc  gate_memproto.h  gate_memtext.cc  gate_memtext.h  init.h  interface.cc  interface.h  main.cc  mod_cache.cc  mod_cache.h  mod_network.cc  mod_store.cc  mod_store.h  proto_network.cc  scope_store.cc  scope_store.h
src/logic/gateway/memproto/: memproto.c  memtext.rl
src/logic/manager/: Makefile.am  control_framework.cc  control_framework.h  framework.cc  framework.h  init.h  main.cc  mod_control.cc  mod_network.cc  mod_replace.cc  proto_control.cc  proto_network.cc  proto_replace.cc
src/logic/protogen/: Makefile.am
src/logic/server/: Makefile.am  framework.cc  framework.h  init.h  main.cc  mod_control.cc  mod_network.cc  mod_replace.cc  mod_replace_stream.cc  mod_store.cc  proto_control.cc  proto_network.cc  proto_replace.cc  proto_replace_stream.cc  proto_store.cc  storage.cc  storage.h  zconnection.h  zmmap_stream.cc  zmmap_stream.h
src/logic/server/storage/: interface.h  luxio.cc  tchdb.cc
src/mp/: Makefile.am  exception.h  object_callback.pre.h  pthread.h  pthread_impl.h  shared_buffer.h  shared_buffer_impl.h  stream_buffer.h  stream_buffer_impl.h  utility.h  wavy.h
src/mp/wavy/: core.pre.h  output.h  singleton.pre.h
src/mpsrc/: Makefile.am  wavy_connect.cc  wavy_core.cc  wavy_core.h  wavy_edge.h  wavy_edge_epoll.h  wavy_edge_eventport.h  wavy_output.cc  wavy_timer.cc
src/rpc/: Makefile.am  address.cc  address.h  client.h  client_tmpl.h  cluster.cc  cluster.h  connection.h  exception.h  message.h  protocol.h  request.h  responder.h  responder_impl.h  retry.h  rpc.h  server.cc  server.h  session.cc  session.h  session_impl.h  transport.h  transport_impl.h  types.h  vrefbuffer.h  wavy.h  weak_responder.h  weak_responder_impl.h
src/storage/: Makefile.am  buffer_queue.h  interface.h  luxio.cc  storage.cc  storage.h  tcadb.cc  tcbdb.cc  tchdb.cc
storage/: Makefile.am  buffer_queue.cc  buffer_queue.h  interface.cc  interface.h  luxio.cc  luxio.h  storage.cc  storage.h  tchdb.c  tchdb.cc  tokyocabinet.c  tokyocabinet.h
t/: 00_load.t  01_set.t  02_delete.t  03_get_multi.t  04_replace_on_add_server.t  05_replication.t  06_getset_on_fault_server.t  07_get_multi_on_fault_server.t  08_replace_on_recover_server.t  09_server_fault_on_fault_manager.t  10_recover_manager.t  ManyData.pm  README  TestUtil.pm  auto_.rb  auto_common.rb  chukan.rb
test/: Makefile  check_set_get_delete.c  membench.c  memstrike.c  test_bench.c  test_bench2.c  test_delete.c  test_get.c  test_get_noset.c  test_multi.c  test_nowrite.c  test_set.c  test_set_get_delete.c
