export ERB
export RUBY
export RAGEL
SUBDIRS = src

DOC_WFDOC = \
		doc/memo.txt \
		doc/kumoctl.1.txt \
		doc/kumolog.1.txt \
		doc/kumostat.1.txt

DOC_FILES = \
		doc/memo.pdf \
		doc/memo.html \
		doc/kumoctl.1 \
		doc/kumolog.1 \
		doc/kumostat.1

EXTRA_DIST = $(DOC_WFDOC) $(DOC_FILES)

man_MANS = \
		doc/kumoctl.1 \
		doc/kumolog.1 \
		doc/kumostat.1

