
noinst_LIBRARIES = libkumo_log.a

libkumo_log_a_SOURCES = \
		mlogger.cc \
		mlogger_null.cc \
		mlogger_ostream.cc \
		mlogger_syslog.cc \
		mlogger_tty.cc \
		logpack.c \
		logpacker.cc

noinst_HEADERS = \
		mlogger.h \
		mlogger_null.h \
		mlogger_ostream.h \
		mlogger_syslog.h \
		mlogger_tty.h \
		logpack.h \
		logpack.hpp \
		logpacker.h

EXTRA_DIST = \
		mlogger.h.erb \
		logpack.hpp.erb


