
EXTRA_DIST = \
		object_callback.pre.h \
		wavy/core.pre.h \
		wavy/singleton.pre.h

noinst_HEADERS = \
		exception.h \
		functional.h \
		memory.h \
		object_callback.h \
		pp.h \
		pthread.h \
		pthread_impl.h \
		shared_buffer.h \
		shared_buffer_impl.h \
		source.h \
		source_impl.h \
		stream_buffer.h \
		stream_buffer_impl.h \
		utility.h \
		wavy/core.h \
		wavy/output.h \
		wavy/singleton.h \
		wavy.h

